NXP NFC HAL update for SNxxx
- Support for next generation NFCC
- Support to include eUICC NFCEE
- Add contactless support over eUICC
- Improvements in CORE_RESET_CMD retry logic
- Remove unused functions and config options
- Removal of P2P Prio logic changes from NFC HAL
- Code improvements
- Static analysis fixes

Bug: 312998929
Test: NFC On/Off, CTS, VTS
Change-Id: Ic14325d9047ffdb568c325018b861f41301fa8a0

--- a/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nxp-PN557_example.conf
+++ b/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nxp-PN557_example.conf
@@ -30,10 +30,6 @@ MIFARE_READER_ENABLE=0x01
 VZW_FEATURE_ENABLE=0x01
 
 ###############################################################################
-# File name for Firmware
-NXP_FW_NAME="libpn557_fw.so"
-
-###############################################################################
 # System clock source selection configuration
 #define CLK_SRC_XTAL       1
 #define CLK_SRC_PLL        2
@@ -117,7 +113,7 @@ NXP_NFC_CHIP=0x09
 
 ###############################################################################
 # CE when Screen state is locked
-# This setting is for DEFAULT_AID_ROUTE,
+# This setting is for DEFAULT_ROUTE,
 # DEFAULT_DESFIRE_ROUTE and DEFAULT_MIFARE_CLT_ROUTE
 # Disable           0x00
 # Enable            0x01
@@ -145,7 +141,7 @@ NXP_SWP_RD_TAG_OP_TIMEOUT=0x01
 # eSE   0x01
 # UICC  0x02
 # UICC2 0x03
-DEFAULT_AID_ROUTE=0x00
+DEFAULT_ROUTE=0x00
 
 ###############################################################################
 # Configure the default NfcA/IsoDep technology and protocol route. Can be
@@ -189,7 +185,7 @@ DEFAULT_SYS_CODE_ROUTE=0x00
 # bit pos 3 = Screen On lock
 # bit pos 4 = Screen off unlock
 # bit pos 5 = Screen Off lock
-DEFAULT_AID_PWR_STATE=0x39
+DEFAULT_AID_PWR_STATE=0x3B
 
 ###############################################################################
 #Set the Mifare Desfire Power state :
@@ -315,12 +311,6 @@ NXP_CN_TRANSIT_CMA_BYPASSMODE_ENABLE=0x00
 NXP_CN_TRANSIT_BLK_NUM_CHECK_ENABLE=0x01
 
 ###############################################################################
-#Enable NXP NCI runtime parser library
-#Enable 0x01
-#Disable 0x00
-NXP_NCI_PARSER_LIBRARY=0x00
-
-###############################################################################
 #This config will enable different level of Rf transaction debugs based on the
 #following values provided. Decoded information will be printed in adb logcat
 #Debug Mode         Levels
@@ -370,7 +360,7 @@ NFA_PROPRIETARY_CFG={05, FF, FF, 06, 81, 80, 70, FF, FF}
 ###############################################################################
 #White list of Hosts
 #This values will be the Hosts(NFCEEs) in the HCI Network.
-DEVICE_HOST_ALLOW_LIST={80:81}
+DEVICE_HOST_ALLOW_LIST={02, C0}
 
 ###############################################################################
 #OffHost UICC route location for MultiSE
@@ -400,6 +390,12 @@ NXP_DUAL_UICC_ENABLE=0x01
 # Disable           0x00
 # Enable            0x01
 NXP_DISCONNECT_TAG_IN_SCRN_OFF =0x01
+
+#################################################################################
+# Enable wait/delay if RF session is active.
+# Disable           0x00
+# Enable            0x01
+NXP_CE_PRIORITY_ENABLED=0x00
 
 ###############################################################################
 # Core configuration extensions
