--- a/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nci.conf
+++ b/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nci.conf
@@ -68,21 +68,10 @@ NFA_DM_DISC_DURATION_POLL=300
 # NFA_TECHNOLOGY_MASK_B             0x02    /* NFC Technology B             */
 # NFA_TECHNOLOGY_MASK_F             0x04    /* NFC Technology F             */
 # NFA_TECHNOLOGY_MASK_ISO15693      0x08    /* Proprietary Technology       */
-# NFA_TECHNOLOGY_MASK_KOVIO         0x20    /* Proprietary Technology       */
-# NFA_TECHNOLOGY_MASK_ACTIVE        0x40    /* NFC Technology Active        */
-POLLING_TECH_MASK=0x6F
+POLLING_TECH_MASK=0x0F
 
 ###############################################################################
-# Force P2P to only listen for the following technology(s).
-# The bits are defined as tNFA_TECHNOLOGY_MASK in nfa_api.h.
-# Default is NFA_TECHNOLOGY_MASK_A | NFA_TECHNOLOGY_MASK_F |
-#NFA_TECHNOLOGY_MASK_ACTIVE
-#
-# Notable bits:
-# NFA_TECHNOLOGY_MASK_A             0x01    /* NFC Technology A             */
-# NFA_TECHNOLOGY_MASK_F             0x04    /* NFC Technology F             */
-#NFA_TECHNOLOGY_MASK_ACTIVE         0x40    /* NFC Technology Active        */
-P2P_LISTEN_TECH_MASK=0x45
+
 
 PRESERVE_STORAGE=0x01
 
@@ -119,5 +108,11 @@ OFFHOST_AID_ROUTE_PWR_STATE=0x3B
 #Set bit to 1 , block list is enabled
 #Set bit to 0,  to disable block list
 NFA_AID_BLOCK_ROUTE=0x00
+
+###############################################################################
+# Set presence check retry count value. Value Range: 0 to 5
+# This value indicates the number of time presence check is repeated in case of
+# failure
+PRESENCE_CHECK_RETRY_COUNT=0
 
 ###############################################################################
