--- a/snxxx/halimpl/conf/SN1xx/sn100/gen-config-files/libnfc-nci.conf
+++ b/snxxx/halimpl/conf/SN1xx/sn100/gen-config-files/libnfc-nci.conf
@@ -18,11 +18,6 @@ NFA_DM_DISC_DURATION_POLL=500
 UICC_LISTEN_TECH_MASK=0x07
 
 ###############################################################################
-# Force HOST listen feature enable or disable.
-# 0: Disable
-# 1: Enable
-HOST_LISTEN_ENABLE=0x01
-###############################################################################
 # When screen is turned off, specify the desired power state of the controller.
 # 0: power-off-sleep state; DEFAULT
 # 1: full-power state
@@ -41,21 +36,8 @@ SCREEN_OFF_POWER_STATE=1
 # NFA_TECHNOLOGY_MASK_B             0x02    /* NFC Technology B             */
 # NFA_TECHNOLOGY_MASK_F             0x04    /* NFC Technology F             */
 # NFA_TECHNOLOGY_MASK_ISO15693      0x08    /* Proprietary Technology       */
-# NFA_TECHNOLOGY_MASK_A_ACTIVE      0x40    /* NFC Technology A active mode */
-# NFA_TECHNOLOGY_MASK_F_ACTIVE      0x80    /* NFC Technology F active mode */
-POLLING_TECH_MASK=0x4F
-###############################################################################
-# Force P2P to only listen for the following technology(s).
-# The bits are defined as tNFA_TECHNOLOGY_MASK in nfa_api.h.
-# Default is NFA_TECHNOLOGY_MASK_A | NFA_TECHNOLOGY_MASK_F |
-#            NFA_TECHNOLOGY_MASK_A_ACTIVE | NFA_TECHNOLOGY_MASK_F_ACTIVE
-#
-# Notable bits:
-# NFA_TECHNOLOGY_MASK_A	            0x01    /* NFC Technology A             */
-# NFA_TECHNOLOGY_MASK_F	            0x04    /* NFC Technology F             */
-# NFA_TECHNOLOGY_MASK_A_ACTIVE      0x40    /* NFC Technology A active mode */
-# NFA_TECHNOLOGY_MASK_F_ACTIVE      0x80    /* NFC Technology F active mode */
-P2P_LISTEN_TECH_MASK=0x45
+POLLING_TECH_MASK=0x0F
+
 ###############################################################################
 PRESERVE_STORAGE=0x01
 ###############################################################################
@@ -90,13 +72,6 @@ AID_MATCHING_MODE=0x03
 # 0x02, keep configurations.
 NCI_RESET_TYPE=0x02
 
-###############################################################################
-# Preferred Secure Element for Technology based routing
-# eSE               0x01
-# UICC              0x02
-
-NXP_PRFD_TECH_SE=0x01
-
 ################################################################################
 #Set bit to 1 , block list is enabled
 #Set bit to 0,  to disable block list
@@ -116,5 +91,10 @@ DEFAULT_SYS_CODE={FE:FE}
 #########################################################################
 #Set NCI credit notification timeout value
 NXP_NCI_CREDIT_NTF_TIMEOUT=2
+###############################################################################
+# Set presence check retry count value. Value Range: 0 to 5
+# This value indicates the number of time presence check is repeated in case of
+# failure
+PRESENCE_CHECK_RETRY_COUNT=0
 #########################################################################
 
