--- a/snxxx/halimpl/conf/SN1xx/sn110/gen-config-files/libnfc-nxp_AndroidOne.conf
+++ b/snxxx/halimpl/conf/SN1xx/sn110/gen-config-files/libnfc-nxp_AndroidOne.conf
@@ -115,7 +115,7 @@ DEFAULT_NFCF_ROUTE=0xC0
 # bit pos 3 = Screen off unlock
 # bit pos 4 = Screen On lock
 # bit pos 5 = Screen Off lock
-DEFAULT_AID_PWR_STATE=0x39
+DEFAULT_AID_PWR_STATE=0x3B
 ###############################################################################
 #Set the Mifare Desfire Power state :
 #This settings will be used when application does not set this parameter
@@ -174,11 +174,6 @@ DEFAULT_SYS_CODE_ROUTE=0xC0
 #AID_MATCHING_PLATFORM=0x01
 
 ###############################################################################
-# P61 interface options
-# SPI 0x02
-NXP_P61_LS_DEFAULT_INTERFACE=0x00
-
-###############################################################################
 #CHINA_TIANJIN_RF_SETTING
 #Enable  0x01
 #Disable  0x00
@@ -200,23 +195,6 @@ NXP_P61_LS_DEFAULT_INTERFACE=0x00
 NXP_FLASH_CONFIG=0x02
 
 ###############################################################################
-# P61 interface options for JCOP Download
-# SPI 0x02
-NXP_P61_JCOP_DEFAULT_INTERFACE=0x00
-
-###############################################################################
-# Option to perform LS update every boot
-# Enable 0x01
-# Disable    0x00
-NXP_LS_FORCE_UPDATE_REQUIRED=0x00
-
-###############################################################################
-# Option to perform JCOP update every boot
-# Enable 0x01
-# Disable 0x00
-NXP_JCOP_FORCE_UPDATE_REQUIRED=0x00
-
-###############################################################################
 # Bail out mode
 #  If set to 1, NFCC is using bail out mode for either Type A or Type B poll.
 NFA_POLL_BAIL_OUT_MODE=0x01
@@ -224,7 +202,7 @@ NFA_POLL_BAIL_OUT_MODE=0x01
 ###############################################################################
 # Allow list of Hosts
 # This values will be the Hosts(NFCEEs) in the HCI Network.
-DEVICE_HOST_ALLOW_LIST={C0, 80}
+DEVICE_HOST_ALLOW_LIST={02, 80, 81, C0}
 
 ###############################################################################
 # Choose the presence-check algorithm for type-4 tag.  If not defined, the default value is 1.
@@ -276,16 +254,6 @@ NFA_PROPRIETARY_CFG={05, FF, FF, 06, 81, 80, FF, FF, FF}
 #                                  \__ __/
 # e.g. NXP_CORE_PROP_SYSTEM_DEBUG=0x0031 ==> Modulation detected, L1, L2 CE
 NXP_CORE_PROP_SYSTEM_DEBUG=0x0000
-
-###############################################################################
-#Enable NXP NCI runtime parser library
-#Enable 0x01
-#Disable 0x00
-NXP_NCI_PARSER_LIBRARY=0x00
-
-###############################################################################
-# Timeout value in milliseconds for JCOP OS download to complete
-OS_DOWNLOAD_TIMEOUT_VALUE=60000
 
 ###############################################################################
 # Enable forward functionality
@@ -399,6 +367,13 @@ NFA_CONFIG_FORMAT=1
 # Disable           0x00
 # Enable            0x01
 NXP_DISCONNECT_TAG_IN_SCRN_OFF=0x01
+
+#################################################################################
+# Enable wait/delay if RF session is active.
+# Disable           0x00
+# Enable            0x01
+NXP_CE_PRIORITY_ENABLED=0x00
+
 #################################################################################
 # Core configuration extensions
 # It includes
