NXP NFC HAL update for SNxxx
- Fix for race condition between nfc hal open & close
- ULPDET Optimization of NVM write cycles
- Store eUICC DPD events to a file
- PowerTracker accuracy improvement.
- Updated the default dev node and debug logs.
- Added new config to enable/disable Mute To RATS
- Fix NFC service stuck issue in tearing tests.
- ULPDET feature code cleanup
- Add FW recovery for continuous core reset ntf.
- Max number of ee supported feature code cleanup
- Fix for No config update if I2C error occurs during partialInit
- Adding support for 76.8MHz clock frequency
- ULPDET mode enabled in shutdown case.
- Support configurable RD mode wait time
- Added files visibility to Unit test module
- Fix warnings from static analysis tool.

Bug: 345676146
Test: NFC On/Off, CTS, VTS
Change-Id: I260448820c3851e70240a4832178e45917d46107

--- a/snxxx/halimpl/conf/SN220/gen-config-files/libnfc-nxp_AndroidOne.conf
+++ b/snxxx/halimpl/conf/SN220/gen-config-files/libnfc-nxp_AndroidOne.conf
@@ -238,6 +238,14 @@ NFA_PROPRIETARY_CFG={05, FF, FF, 06, 81, 80, FF, FF, FF}
 #Disable  0x00
 #NXP_CN_TRANSIT_BLK_NUM_CHECK_ENABLE=0x01
 
+###############################################################################
+#NXP_MIFARE_MUTE_TO_RATS_ENABLE
+#Enable/Disable Mute To RATS
+#Enable   0x01 NFCC stays mute on RATS command when configured with
+#              a non ISODEP SAK
+#Disable  0x00
+#NXP_MIFARE_MUTE_TO_RATS_ENABLE=0x01
+
 ################################################################################
 #This flags will enable different modes of Lx Debug based on bits of the Byte0
 #Byte 0:
