Add provision to support multiple HCI UICC pipe IDs
- To support multiple UICC HCI pipe IDs from config file based
on system/OEM configurations instead of limiting.
- AIDL version creation to support MEP feature

Bug: 349089282
Test: manual test
Change-Id: I5210ab1659833a88bea8d267ac19995530c5a607

--- a/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nxp-PN557_example.conf
+++ b/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nxp-PN557_example.conf
@@ -234,10 +234,16 @@ DEFAULT_SYS_CODE_PWR_STATE=0x00
 ###############################################################################
 # Configure the NFC Extras to open and use a static pipe.  If the value is
 # not set or set to 0, then the default is use a dynamic pipe based on a
-# destination gate (see NFA_HCI_DEFAULT_DEST_GATE).  Note there is a value
-# for each UICC (where F3="UICC0" and F4="UICC1")
+# destination gate (see NFA_HCI_DEFAULT_DEST_GATE). Note there is a value
+# for each EE.
 OFF_HOST_ESE_PIPE_ID=0x19
-OFF_HOST_SIM_PIPE_ID=0x0A
+
+###############################################################################
+# Configure the NFC Extras to open and use a static pipe.  If the value is
+# not set or set to 0, then the default is use a dynamic pipe based on a
+# destination gate (see NFA_HCI_DEFAULT_DEST_GATE).  Note there is a value
+# for each SIM1, SIM2 etc based on the number of SIM's supported.
+OFF_HOST_SIM_PIPE_IDS={0A}
 
 ###############################################################################
 # Bail out mode
