--- a/snxxx/halimpl/conf/SN1xx/sn110/gen-config-files/libnfc-nxp_AndroidOne.conf
+++ b/snxxx/halimpl/conf/SN1xx/sn110/gen-config-files/libnfc-nxp_AndroidOne.conf
@@ -264,11 +264,16 @@ FORWARD_FUNCTIONALITY_ENABLE=0x01
 ###############################################################################
 # Configure the NFC Extras to open and use a static pipe.  If the value is
 # not set or set to 0, then the default is use a dynamic pipe based on a
-# destination gate (see NFA_HCI_DEFAULT_DEST_GATE).  Note there is a value
-# for each EE (ESE/SIM1/SIM2)
+# destination gate (see NFA_HCI_DEFAULT_DEST_GATE). Note there is a value
+# for each EE.
 OFF_HOST_ESE_PIPE_ID=0x16
-OFF_HOST_SIM_PIPE_ID=0x0A
-OFF_HOST_SIM2_PIPE_ID=0x23
+
+###############################################################################
+# Configure the NFC Extras to open and use a static pipe.  If the value is
+# not set or set to 0, then the default is use a dynamic pipe based on a
+# destination gate (see NFA_HCI_DEFAULT_DEST_GATE).  Note there is a value
+# for each SIM1, SIM2 etc based on the number of SIM's supported.
+OFF_HOST_SIM_PIPE_IDS={0A:23}
 
 ###############################################################################
 #Set the Felica T3T System Code Power state :
