--- a/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nci.conf
+++ b/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nci.conf
@@ -116,3 +116,12 @@ NFA_AID_BLOCK_ROUTE=0x00
 PRESENCE_CHECK_RETRY_COUNT=0
 
 ###############################################################################
+# Forcing HOST to listen for a selected protocol
+# 0x00 : Disable Host Listen
+# 0x01 : Enable Host to Listen (A)  for ISO-DEP tech A
+# 0x02 : Enable Host to Listen (B)  for ISO-DEP tech B
+# 0x04 : Enable Host to Listen (F)  for T3T Tag Type Protocol tech F
+# 0x07 : Enable Host to Listen (ABF)for ISO-DEP tech AB & T3T Tag Type Protocol tech F
+HOST_LISTEN_TECH_MASK=0x07
+
+###############################################################################
