--- a/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nci.conf
+++ b/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nci.conf
@@ -114,7 +114,6 @@ NFA_AID_BLOCK_ROUTE=0x00
 # This value indicates the number of time presence check is repeated in case of
 # failure
 PRESENCE_CHECK_RETRY_COUNT=0
-
 ###############################################################################
 # Forcing HOST to listen for a selected protocol
 # 0x00 : Disable Host Listen
@@ -123,5 +122,10 @@ PRESENCE_CHECK_RETRY_COUNT=0
 # 0x04 : Enable Host to Listen (F)  for T3T Tag Type Protocol tech F
 # 0x07 : Enable Host to Listen (ABF)for ISO-DEP tech AB & T3T Tag Type Protocol tech F
 HOST_LISTEN_TECH_MASK=0x07
-
 ###############################################################################
+# Config option to skip ISO15693 GET_SYS_INFO command as NFC forum tool does
+# not support this command
+# 0 to Disable this behaviour
+# 1 to Enable this behaviour
+ISO15693_SKIP_GET_SYS_INFO_CMD=0
+##############################################################################
