Added Android vendor NCI message logging support
New logging option added for Android vendor NCI messages & PL
to differentiate with regular NCI frames.

Bug: 323440961
Test: Gts Nfc
Change-Id: Ia56aea60d5c8e932533dccb35b3686f37a1063ff

--- a/snxxx/halimpl/conf/SN220/gen-config-files/libnfc-nxp_AndroidOne.conf
+++ b/snxxx/halimpl/conf/SN220/gen-config-files/libnfc-nxp_AndroidOne.conf
@@ -12,6 +12,7 @@ NXPLOG_EXTNS_LOGLEVEL=0x04
 NXPLOG_NCIHAL_LOGLEVEL=0x04
 NXPLOG_NCIX_LOGLEVEL=0x04
 NXPLOG_NCIR_LOGLEVEL=0x04
+NXPLOG_AVCNCI_LOGLEVEL=0x04
 NXPLOG_FWDNLD_LOGLEVEL=0x04
 NXPLOG_TML_LOGLEVEL=0x04
 NFC_DEBUG_ENABLED=1
