--- a/snxxx/halimpl/conf/SN300/gen-config-files/libnfc-nxp_AndroidOne.conf
+++ b/snxxx/halimpl/conf/SN300/gen-config-files/libnfc-nxp_AndroidOne.conf
@@ -12,6 +12,7 @@ NXPLOG_EXTNS_LOGLEVEL=0x04
 NXPLOG_NCIHAL_LOGLEVEL=0x04
 NXPLOG_NCIX_LOGLEVEL=0x04
 NXPLOG_NCIR_LOGLEVEL=0x04
+NXPLOG_AVCNCI_LOGLEVEL=0x04
 NXPLOG_FWDNLD_LOGLEVEL=0x04
 NXPLOG_TML_LOGLEVEL=0x04
 NFC_DEBUG_ENABLED=1
