NXP NFC HAL update for SNxxx
-Removed pn8x compilation
-Updated the combinations of Lx_DEBUG_CFG for RFU.
-Fix for RFConfig recovery sequence not happening
-T4T NDEF card mode support in phone power off scenario.
-Fix for Fw download check Integrity fail.
-Added backward compatibility support for T4T NDEF card mode
in phone power off scenario
-Update RF registers without NFC reset.
-Fix for data corruption issue during stability test
-Fix for RF parameter update for mifare nack/mute to rats
-Fix for potential OOB Read
-Filter unsupported GET CAPS command at MW
-Fix disable Listen mode issue
-Fix NFC stuck issue due to race condition
-Fix for PreDiscover VTS HIDL Nfc test failure
-Fix for NFC service die during first boot
-Disabling Autonomous mode in case of T4T Phone Off CE
supported
-Added Wired mode interface files
-Fix for NFC is not turning on after VTS Test
-Fix for UICC not detected once NFC ON

Bug:345676146
Test: NFC On/Off, CTS, VTS
Change-Id: I78bc59f24084efcceae68905a84b5ca9fc817acf

--- a/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nci.conf
+++ b/snxxx/halimpl/conf/PN557/gen-config-files/libnfc-nci.conf
@@ -110,6 +110,11 @@ OFFHOST_AID_ROUTE_PWR_STATE=0x3B
 NFA_AID_BLOCK_ROUTE=0x00
 
 ###############################################################################
+# Tech route options
+# 0x00, Route mute techs to DH, enable block bit and set power state to 0x00
+# 0x01, Remove mute techs from rf discover cmd
+MUTE_TECH_ROUTE_OPTION=0x01
+###############################################################################
 # Set presence check retry count value. Value Range: 0 to 5
 # This value indicates the number of time presence check is repeated in case of
 # failure
