--- a/snxxx/halimpl/conf/SN300/gen-config-files/libnfc-nci.conf
+++ b/snxxx/halimpl/conf/SN300/gen-config-files/libnfc-nci.conf
@@ -102,6 +102,11 @@ NXP_NCI_CREDIT_NTF_TIMEOUT=2
 # failure
 PRESENCE_CHECK_RETRY_COUNT=0
 #########################################################################
+# Tech route options
+# 0x00, Route mute techs to DH, enable block bit and set power state to 0x00
+# 0x01, Remove mute techs from rf discover cmd
+MUTE_TECH_ROUTE_OPTION=0x01
+##############################################################################
 # Forcing HOST to listen for a selected protocol
 # 0x00 : Disable Host Listen
 # 0x01 : Enable Host to Listen (A)  for ISO-DEP tech A
