--- a/snxxx/halimpl/conf/PN560/gen-config-files/libnfc-nci.conf
+++ b/snxxx/halimpl/conf/PN560/gen-config-files/libnfc-nci.conf
@@ -107,3 +107,7 @@ HOST_LISTEN_TECH_MASK=0x07
 # 1 to Enable this behaviour
 ISO15693_SKIP_GET_SYS_INFO_CMD=0
 ##############################################################################
+# Deactivate notification wait time out in seconds used in listen active state
+# Default is 8sec if not set or set as 0 (see nfc_target.h)
+NFA_DM_LISTEN_ACTIVE_DEACT_NTF_TIMEOUT=3
+##############################################################################
